# tetano

./: Cargo.toml
migrations/2022-01-01-061649_enable_uuid/: up.sql
migrations/2022-01-01-061731_create_posts/: up.sql
src/: main.rs  router.rs
src/config/: database.rs
src/handlers/: post.rs
src/models/: mod.rs  post.rs
src/repo/: mod.rs  post_repo.rs
