[package]
name = "tetano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.5.1"
chrono = { version = "0.4.10", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
rbson = "2"
diesel = { version = "1.4.4", features = ["postgres"] }